--- a/index.html
+++ b/index.html
@@ -3,23 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/master.css">
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <main class="container">
 <div class="card">
   <div class="image">
-    <picture>    <img src="/images/image-equilibrium.jpg" alt="">
-</picture>
+       <img src="./images/image-equilibrium.jpg" alt="">
+    
     <div class="mask"><img src="/images/icon-view.svg" alt=""></div>
   </div>
   <div class="description">
@@ -29,18 +22,15 @@
       <div class="price">
         <img src="/images/icon-ethereum.svg" alt="">
                 <p>0.041 ETH</p>
-
       </div>
       <div class="days">
         <img src="/images/icon-clock.svg" alt="">
                 <p> 3 days left</p>
-
       </div>
     </div>
     </div>
   <div class="creator">
     <img src="/images/image-avatar.png" alt="">
-
     <p>  Creation of  <a href="#">Jules Wyvern</a></p>
   </div>
 </div>
